<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/ic_myaccount"
            android:title="@string/menu_myaccount" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/action_cart"
            android:icon="@drawable/ic_shopping_24"/>
        <item
            android:id="@+id/nav_myorder"
            android:title="@string/action_myorder"
            android:icon="@drawable/my_order" />

       <!-- <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>
</menu>