<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Confirm_order" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/checkout_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/checkout_back_content"
                android:scaleType="fitCenter"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/lblchkhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bell_mt_bold"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/lblconfirm_order"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:id="@+id/linearlayout_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/txtcheck_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/bell_mt_bold"
                        android:textColor="#000000"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtcheck_addr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/bell_mt"
                        android:textColor="#2C2C2C"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtcheck_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/bell_mt"
                        android:textColor="#2C2C2C"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtcheck_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/bell_mt"
                        android:textColor="#2C2C2C"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnchangeaddr"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#2874F0"
                    android:fontFamily="@font/bell_mt"
                    android:text="@string/btn_change_address"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:id="@+id/aco_linear_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10sp"
            app:cardElevation="5sp"
            app:contentPadding="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblCOTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bell_mt_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/total"
                    android:textColor="#070707"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtlblCOtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bell_mt_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#070707"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnconfirm_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2874F0"
                android:fontFamily="@font/bell_mt"
                android:text="@string/confirm_order"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>