<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:orientation="vertical"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3F51B5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="15sp"
            android:contentDescription="@string/antique_pavbhaji"
            android:cropToPadding="false"
            app:srcCompat="@drawable/antique_logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:id="@+id/ln1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbllogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bell_mt_bold"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/login_here"
                        android:textColor="#9C27B0"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtlblphone"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="40dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_rounded"
                        android:ems="10"
                        android:fontFamily="@font/bell_mt_bold"
                        android:gravity="center_vertical"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="#5F44BB"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtlblotp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_rounded"
                        android:clickable="false"
                        android:ems="10"
                        android:fontFamily="@font/bell_mt_bold"
                        android:gravity="center_vertical"
                        android:hint="OTP"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textColor="#5F44BB"
                        android:textStyle="bold" />

                    <!--    <TextView
                        android:id="@+id/timerlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:gravity="right"
                        android:textColor="#3F51B5"
                        android:textSize="20sp"
                        android:textStyle="bold" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:background="@drawable/button_rounded"
                        android:fontFamily="@font/bell_mt"
                        android:padding="10dp"
                        android:text="@string/send_otp"
                        android:textColor="#FFFCFC"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnAuthOTP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:background="@drawable/button_rounded"
                        android:fontFamily="@font/bell_mt"
                        android:padding="10dp"
                        android:text="Sign In"
                        android:textColor="#FFFCFC"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
